[package]
name = "rust"
description = "rust wasm module for deno"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.100"
xxhash-rust = { version = "0.8", default-features = false, features = [
    # "xxh32",
    # "const_xxh32",
    # "xxh64",
    # "const_xxh64",
    "xxh3",
    "const_xxh3",
] }

[profile.release]
opt-level = "s"
lto = true
